fix(home): tweak max paragraph width
on wider format monitor, 60% is much larger than the rest of the content width which looks strange. this works across breakpoints

--- a/site/src/components/KilledName/KilledName.styles.module.css
+++ b/site/src/components/KilledName/KilledName.styles.module.css
@@ -120,7 +120,8 @@
   color: var(--tfp-card-explanation);
   font-size: 0.8em;
   text-align: center;
-  max-width: 60%;
+  max-width: 800px;
+  padding: 0 40px;
   margin: 25px auto;
 }
 
